# nixbot-telegram

./: Readme.md  default.nix  flake.nix  nixbot-telegram.cabal  pkgs.nix  shell.nix
src/: Bot.hs  Main.hs  NixEval.hs
src/Command/Nix/: Repl.hs
state/1051966856/eval.state/: eval.state
